# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("src") {
  deps = [
    "//apps/media/src/audio",
    "//apps/media/src/audio_server",
    "//apps/media/src/decode",
    "//apps/media/src/demux",
    "//apps/media/src/ffmpeg",
    "//apps/media/src/fidl",
    "//apps/media/src/flog_service",
    "//apps/media/src/framework",
    "//apps/media/src/framework_create",
    "//apps/media/src/media_service",
    "//apps/media/src/net_media_service",
    "//apps/media/src/util",
    "//apps/media/src/video",
  ]
}
